<resources>
    <string name="numbers_capture">Numbers Capture</string>
    <string name="storage">Storage</string>
    <string name="settings">Settings</string>
    <string name="built_in_camera">Built-In Camera</string>
    <string name="delete">Delete</string>
    <string name="are_you_sure">Are You Sure</string>
    <string name="select_all">Select All</string>
    <string name="proof_details">Proof Details</string>
    <string name="hash">Hash</string>
    <string name="mime_type">MIME Type</string>
    <string name="timestamp">Timestamp</string>
    <string name="attached_image">Attached Image</string>
    <string name="information">Information</string>
    <string name="permission_denied">Permission Denied</string>
    <string name="hash_of_android_id">Hash of Android ID</string>
    <string name="last_knwon_gps_latitude">Last Known GPS Latitude</string>
    <string name="last_knwon_gps_longitude">Last Known GPS Longitude</string>
    <string name="last_knwon_gps_address">Last Known GPS Address</string>
    <string name="last_knwon_gps_accuracy">Last Known GPS Accuracy</string>
    <string name="last_knwon_gps_altitude">Last Known GPS Altitude</string>
    <string name="last_knwon_gps_bearing">Last Known GPS Bearing</string>
    <string name="last_knwon_gps_speed">Last Known GPS Speed</string>
    <string name="last_knwon_gps_timestamp">Last Known GPS Timestamp</string>
    <string name="current_gps_latitude">Current GPS Latitude</string>
    <string name="current_gps_longitude">Current GPS Longitude</string>
    <string name="current_gps_address">Current GPS Address</string>
    <string name="current_gps_accuracy">Current GPS Accuracy</string>
    <string name="current_gps_altitude">Current GPS Altitude</string>
    <string name="current_gps_bearing">Current GPS Bearing</string>
    <string name="current_gps_speed">Current GPS Speed</string>
    <string name="current_gps_timestamp">Current GPS Timestamp</string>
    <string name="board">Board</string>
    <string name="brand">Brand</string>
    <string name="device_name">Device Name</string>
    <string name="device_build_id">Device Build ID</string>
    <string name="device_build_fingerprint">Device Build Fingerprint</string>
    <string name="hardware">Hardware</string>
    <string name="manufacturer">Manufacturer</string>
    <string name="end_product_name">End Product Name</string>
    <string name="overall_product_name">Overall Product Name</string>
    <string name="device_build_tags">Device Build Tags</string>
    <string name="device_build_time">Device Build Time</string>
    <string name="device_build_type">Device Build Type</string>
    <string name="accelerometer">Accelerometer</string>
    <string name="gravity">Gravity</string>
    <string name="gyroscope">Gyroscope</string>
    <string name="linear_accelerometer">Linear Accelerometer</string>
    <string name="game_rotation_vector">Game Rotation Vector</string>
    <string name="geomagnetic_rotation_vector">Geomagnetic Rotation Vector</string>
    <string name="magnetic_field">Magnetic Field</string>
    <string name="rotation_vector">Rotation Vector</string>
    <string name="appearance">Appearance</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="set_by_battery_saver">Set by Battery Saver</string>
    <string name="system_default">System Default</string>
    <string name="signature">Signature</string>
    <string name="public_key">Public Key</string>
    <string name="private_key">Private Key</string>
    <string name="public_key_signature">Public Key Signature</string>
    <string name="default_public_key">Default Public Key</string>
    <string name="default_private_key">Default Private Key</string>
    <string name="sign_with_zion">Sign with Zion</string>
    <string name="show_recovery_phrase">Show Recovery Phrase</string>
    <string name="session_signature">Session Signature</string>
    <string name="session_duration">Session Duration</string>
    <string name="start_new_session_now">Start New Session Now</string>
    <string name="generated_time">Generated Time</string>
    <string name="unsupported_device">Unsupported Device</string>
    <string name="create_new_seed">Create New Seed</string>
    <string name="restore_old_seed">Restore Old Seed</string>
    <string name="about">About</string>
    <string name="version">Version</string>
    <string name="save_as">Save as</string>
    <string name="save_proof">Save Proof</string>
    <string name="collect_proof_information">Collect Proof Information</string>
    <string name="publish">Publish</string>
    <string name="publish_proof">Publish Proof</string>
    <string name="nothing_here">Nothing Here</string>
    <string name="caption">Caption</string>
    <string name="edit_caption">Edit Caption</string>
    <string name="canon_ccapi">Canon CCAPI</string>
    <string name="connect_to_camera">Connect to Camera</string>
    <string name="camera_address">Camera Address</string>
    <string name="live_view">Live View</string>
    <string name="publication">Publication</string>
    <string name="publisher">Publisher</string>
    <string name="select_a_publisher">Select a Publisher</string>
    <string name="view_all">View All</string>
    <string name="location">Location</string>
    <string name="device">Device</string>
    <string name="locale">Locale</string>
    <string name="sensor">Sensor</string>
    <string name="others">Others</string>
    <string name="slate">Slate</string>
    <string name="date">Date</string>
    <string name="photographer">Photographer</string>
    <string name="information_provider">Information Provider</string>
    <string name="collect_device_info">Collect Device Info</string>
    <string name="collect_locale_info">Collect Locale Info</string>
    <string name="collect_location_info">Collect Location Info</string>
    <string name="collect_sensor_info">Collect Sensor Info</string>
    <string name="camera">Camera</string>
    <string name="add_new_proof">Add New Proof</string>
    <string name="enabled">Enabled</string>
    <string name="add_e_signature_beta">Add E-Signature (Beta)</string>
    <string name="e_signature_beta">E-Signature (Beta)</string>
    <string name="publisher_responses">Publisher Responses</string>
    <string name="open_in_browser">Open in Browser</string>
    <string name="copy">Copy</string>
    <string name="save_response_image">Save Response Image</string>

    <string name="message_are_you_sure">The action cannot be undone.</string>
    <string name="message_permissions">We need the camera, audio recording and location permissions to build proof. Please allow the permission request by enabling it in Android settings.</string>
    <string name="message_saving_data_to_external">Saving data to external storage</string>
    <string name="message_saved_data_to_external">Data has been saved to external storage</string>
    <string name="message_collecting_proof_information">Collecting proof information</string>
    <string name="message_signing_proof_information">Signing proof information</string>
    <string name="message_publishing_proof">Publishing proof…</string>
    <string name="message_is_being_published_to">is being published to</string>
    <string name="message_published_proof">Proof has been published successfully.</string>
    <string name="message_has_published_to">has published to</string>
    <string name="message_session_duration">The lifetime of a session keypair in minutes.</string>
    <string name="message_will_generate_on_proof_created">Will be generated on the next proof created.</string>
    <string name="message_monitoring_canon_camera">Monitoring new media assets from Canon Camera with CCAPI.</string>
    <string name="message_enable_publishers_in_settings">Enable publishers in settings.</string>
    <string name="message_proofmode_requires_api_less_or_equal_to_28">ProofMode requires Android device API less or equal to 28.</string>
</resources>
