<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/select_all"
        android:icon="@drawable/ic_select_all"
        android:title="@string/select_all"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/publish"
        android:icon="@drawable/ic_publish"
        android:title="@string/publish"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/saveAs"
        android:icon="@drawable/ic_save_alt"
        android:title="@string/save_as"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/delete"
        android:icon="@drawable/ic_delete"
        android:title="@string/delete"
        app:showAsAction="ifRoom" />
</menu>