<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".feature.information_provider_config.InformationProviderConfigFragment">

    <data>

        <variable
            name="viewModel"
            type="io.numbersprotocol.starlingcapture.feature.information_provider_config.InformationProviderConfigViewModel" />
    </data>

    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:paddingEndSystemWindowInsets="@{true}"
        app:paddingStartSystemWindowInsets="@{true}"
        app:paddingTopSystemWindowInsets="@{true}">

        <com.google.android.material.appbar.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize">

            <com.google.android.material.appbar.MaterialToolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:navigationIcon="@drawable/ic_arrow_back"
                app:title="@string/information_provider" />
        </com.google.android.material.appbar.AppBarLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clipToPadding="false"
            app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior"
            app:paddingBottomSystemWindowInsets="@{true}">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="@dimen/keyline_2">

                <com.google.android.material.textview.MaterialTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/keyline_5"
                    android:layout_marginBottom="@dimen/keyline_1"
                    android:paddingStart="@dimen/keyline_3"
                    android:paddingEnd="@dimen/keyline_3"
                    android:text="InfoSnapshot"
                    android:textAppearance="?attr/textAppearanceSubtitle2"
                    android:textColor="?attr/colorPrimary"
                    tools:ignore="HardcodedText" />

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/keyline_3"
                        app:srcCompat="@drawable/ic_device_information" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/keyline_2"
                        android:layout_weight="1"
                        android:text="@string/collect_device_info"
                        android:textAppearance="?attr/textAppearanceListItem" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.infoSnapshotCollectDeviceInfo}"
                        android:onClick="@{(v) -> viewModel.onInfoSnapshotCollectDeviceInfoClick(v)}" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/keyline_3"
                        app:srcCompat="@drawable/ic_location" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/keyline_2"
                        android:layout_weight="1"
                        android:text="@string/collect_location_info"
                        android:textAppearance="?attr/textAppearanceListItem" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.infoSnapshotCollectLocationInfo}"
                        android:onClick="@{(v) -> viewModel.onInfoSnapshotCollectLocationInfoClick(v)}" />
                </androidx.appcompat.widget.LinearLayoutCompat>

                <androidx.appcompat.widget.LinearLayoutCompat
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical">

                    <androidx.appcompat.widget.AppCompatImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="@dimen/keyline_3"
                        app:srcCompat="@drawable/ic_settings_input_antenna" />

                    <com.google.android.material.textview.MaterialTextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="@dimen/keyline_2"
                        android:layout_weight="1"
                        android:text="@string/collect_sensor_info"
                        android:textAppearance="?attr/textAppearanceListItem" />

                    <com.google.android.material.switchmaterial.SwitchMaterial
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="@{viewModel.infoSnapshotCollectSensorInfo}"
                        android:onClick="@{(v) -> viewModel.onInfoSnapshotCollectSensorInfoClick(v)}" />
                </androidx.appcompat.widget.LinearLayoutCompat>
            </androidx.appcompat.widget.LinearLayoutCompat>
        </ScrollView>
    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>